src/test/resources/private/typechecking/fail/method_invocation/method_params_02.jova
class Class1 {
    private int test1(int x){
        return 1;
    }

    public int test2(int x) {
        return test1();
    }

    public int test3(int x) {
        return test1(true);
    }

    public int test4(int x) {
        return test1("true");
    }
}



